style.css
/* ... */
.primePerkBox {
    width: 100%;
    height: 40%;
    background-color: black;
    color: white;
    display: flex;
    flex-direction: column;
}
.classTitle {
    width: 100%;
    height: 21%;
    font-size: clamp(15px, 1.0vw, 25px);
    border-bottom: 1px solid #434343;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
    white-space: normal;
}
.classPerkContainer {
    width: 100%;
    display: flex;
    flex-direction: column;
    height: 25.5%;
    align-items: center;
    white-space: normal;
}
.classPerkName {
    font-size: 15px;
    width: 100%;
    height: 30%;
    padding: 0%;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    box-sizing: border-box;
    word-wrap: break-word;
}
.classPerkIconHolder {
    width: 100%;
    height: 70%;
    padding: 0;
    display: flex;
    text-align: center;
}
.classPerkIcon {
    width: 100%;
    height: 100%;
    margin: auto;
    object-fit: contain;
}
.classPerkDescription{
    width: 100%;
    height: 27%;
    border-bottom: 1px solid #434343;
    font-size: 12px;
    text-align: center;
    white-space: normal;
    box-sizing: border-box;
    overflow-y: auto;
}
.armorHeaderBig{
    width: 100%;
    height: 3%;
    font-size: 20px;
    padding: 0%;
    background-color: #434343;
    display: flex;
    text-align: center;
    align-items: center;
    justify-items: center;
    justify-content: center;
    box-sizing: border-box;
    white-space: nowrap;
    border-bottom: 1px solid black;
}
.armorSelectionsBox {
    width: 100%;
    height: 57%;
    background-color: black;
    color: white;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
}
.armorSelector {
    font-size: 15;
    width: 100%;
    height: 100%;
    padding: 0%;
    background-color: #d9d9d9;
    color: black;
    display: flex;
    text-align: center;
    align-items: center;
    justify-items: center;
    justify-content: center;
    box-sizing: border-box;
    white-space: normal;
}
.armorHeader{
    width: 100%;
    height: 4%;
    font-size: 15px;
    padding: 0%;
    background-color: #434343;
    text-align: left;
}
.armorContainer {
    width: 100%;
    height: 25%;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
}
.armorSelectorBox {
    font-size: 15px;
    width: 100%;
    height: 30%;
    padding: 0%;
    background-color: #d9d9d9;
    color: black;
    display: flex;
    text-align: center;
    align-items: center;
    justify-items: center;
    justify-content: center;
    box-sizing: border-box;
}
.armorIconToStatsBox {
    width: 100%;
    height: 70%;
    display: flex;
}
.armorIconHolder {
    width: 50%;
    height: 100%;
    padding: 0;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    border-left: 1px solid #434343;
    
    /* background-color: #666666; */
}
.armorIcon {
    width: 100%;
    height: 100%;
    object-fit: contain;
    margin: auto;
}
.armorValueContainer {width: 50%; height: 100%;text-align: center;}
.armorValueHeader {
    font-size: 10px;
    width: 100%;
    height: 25%;
    padding: 0%;
    background-color: #434343;
    color: white;
    padding-top: 3px;
    padding-bottom: 3px;
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: center;
}
.armorValueDisplay {
    font-size: 10px;
    width: 100%;
    height: 25%;
    padding: 0%;
    color: white;
    padding-top: 3px;
    padding-bottom: 3px;
    border-left: 1px solid #434343;
    border-right: 1px solid #434343;
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: center;
}
/* ----------------------------------------------------------------------------------------*/
/* ------------------------- Accessory Column ---------------------------------------------*/
/* ----------------------------------------------------------------------------------------*/
.accessoriesBox {
    width: 100%;
    /* min-width: 280px; */
    height: 800px;
    background-color: #666666;
    color: white;
    box-sizing: border-box;
}
.accessoriesTitleHeader {
    font-size: 30px;
    height: 4%;
    width: 100%;
    white-space: nowrap;
    padding: 0%;
    background-color: #434343;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    border-bottom: 2px solid black;
    border-top: 2px solid black;
    box-sizing: border-box;
}
.accessoriesContainer {
    width: 100%;
    height: 10%;
    border-bottom: 1px solid #434343;
    color: white;
    align-items: center;
    display: flex;
    box-sizing: border-box;
}
.accessoryIconHolder {
    width: 25%;
    height: 100%;
    /* min-width: 70px; */
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
}
.accessoryIcon {
    width: 100%;
    height: 100%;
    object-fit: contain;
    margin: auto;
    /* display: flex;
    text-align: center;
    justify-content: center;
    align-items: center; */
}
.accessoryContainer{
    font-size: 15px;
    width: 75%;
    height: 100%;
    padding: 0%;
    background-color: #d9d9d9;
    display: flex;
    flex-direction: column;
}
.accessoryHeader {
    width: 100%;
    height: 22%;
    font-size: 15px;
    padding-left: 2%;
    background-color: #434343;
    text-align: left;
    box-sizing: border-box;
}
.accessorySelectorBox {
    width: 100%;
    height: 30%;
    font-size: 15px;
    padding: 0%;
    text-align: center;
    align-items: center;
    justify-content: center;
    display: flex;
    box-sizing: border-box;
}
/* ... */

